Prepared migration to Java 11